Now supports saving locations.